# Test_Gtest

./: CMakeLists.txt  README.md
src/: c_math.c
src/include/: c_math.h  type.h
test/: test_main.cpp
test/src/: c_div.cpp
test/src/include/: c_div.h  common.h
